[package]
name = "twitch-dmenu"
version = "0.1.0"
authors = ["Will Eaton <me@wseaton.com>"]
edition = "2018"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
twitch_api2 = {repo = "https://github.com/Emilgardis/twitch_api2/tree/v0.6.0-rc.1", features=["all"]}
twitch_oauth2 = { repo = "https://github.com/Emilgardis/twitch_api2/tree/v0.6.0-rc.1", features=["all"]}
reqwest = "*"
tokio = { version = "1.4.0", features = ["rt-multi-thread", "macros"] }
dotenv = "0.15.0"
surf = "*"
serde_json = "*"
configparser = "2.0.1"
shellexpand = "2.1"