[package]
name = "twitch-dmenu"
version = "0.1.0"
authors = ["Will Eaton <me@wseaton.com>"]
edition = "2018"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
twitch_api = { version = "0.7.0-rc.6", features = [
    "reqwest",
    "helix",
    "typed-builder",
] }
twitch_oauth2 = { version = "0.12.2" }
dotenv = "0.15.0"
tokio = { version = "1.4.0", features = ["rt-multi-thread", "macros"] }
reqwest = "*"
serde_json = "*"
configparser = "2.0.1"
shellexpand = "2.1"
thiserror = "1.0.26"
futures = "*"
